--- a/in_default_lgd.ipynb
+++ b/in_default_lgd.ipynb
@@ -178,7 +178,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create pools (todo: use regression)\n",
+        "# Create pools (simplified approach as pooling is not relevant for this example)\n",
         "df['pool'] = pd.cut(df['predict_lgd'], 3, labels=[\"1\", \"2\", \"3\"])\n",
         "df.head()"
       ],
