--- a/spark_regression.ipynb
+++ b/spark_regression.ipynb
@@ -24,9 +24,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ykLmOfJtkDG7",
-        "outputId": "06b57453-ba9e-4851-ee81-8ff9916ff8f9"
+        "outputId": "2ff9c979-b8fa-4bd4-b06a-5023fbadb52f"
       },
-      "execution_count": 71,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 86,
       "metadata": {
         "id": "WHh74H3Kf7IB"
       },
@@ -70,19 +70,19 @@
       "metadata": {
         "id": "05lGSWi1jYkG"
       },
-      "execution_count": 73,
+      "execution_count": 87,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create dataset\n",
-        "observations = 500000\n",
+        "observations = 5_000_000\n",
         "\n",
         "target = np.random.binomial(n=1, p=0.2, size=(observations, 1))\n",
-        "y = (target + np.random.normal(0, 0.1, size=(observations, 1)))\n",
-        "z = (target + np.random.normal(0, 0.1, size=(observations, 1)))\n",
-        "w = (target + np.random.normal(0, 0.1, size=(observations, 1)))\n",
+        "y = target + np.random.normal(0, 0.1, size=(observations, 1))\n",
+        "z = target + np.random.normal(20, 10.0, size=(observations, 1))\n",
+        "w = np.random.normal(3, 1.0, size=(observations, 1))\n",
         "df = pd.DataFrame(np.hstack([target, y, z, w]), \n",
         "                  columns=['target', 'y', 'z', 'w'])\n",
         "\n",
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "w3R-k49ngGKV"
       },
-      "execution_count": 74,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -146,18 +146,17 @@
       "metadata": {
         "id": "7loXDkWlgGEm"
       },
-      "execution_count": 75,
+      "execution_count": 89,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Test everything\n",
+        "# Test Statsmodel\n",
         "vars = ['y', 'z', 'w']\n",
         "\n",
-        "# Test pyspark regression\n",
+        "# Run regression\n",
         "for var in vars:\n",
-        "  # logit_pyspark(var, spark_train, spark_test)\n",
         "  logit_statmodels(train, test, var)"
       ],
       "metadata": {
@@ -165,20 +164,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wYXRG4qkmYqU",
-        "outputId": "2854b33c-9034-446e-9985-634a5ce28ac4"
+        "outputId": "f9a79bb2-4714-4f6b-f9f0-092b25e2ec9e"
       },
-      "execution_count": 76,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Model with y as the independent variable has AUC of 1.00\n",
-            "logit_statmodels took 0.39 seconds to run.\n",
-            "Model with z as the independent variable has AUC of 1.00\n",
-            "logit_statmodels took 0.40 seconds to run.\n",
-            "Model with w as the independent variable has AUC of 1.00\n",
-            "logit_statmodels took 0.36 seconds to run.\n"
+            "logit_statmodels took 4.77 seconds to run.\n",
+            "Model with z as the independent variable has AUC of 0.47\n",
+            "logit_statmodels took 7.19 seconds to run.\n",
+            "Model with w as the independent variable has AUC of 0.50\n",
+            "logit_statmodels took 6.18 seconds to run.\n"
           ]
         }
       ]
@@ -186,10 +185,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Test everything\n",
+        "# Test PySpark\n",
         "vars = ['y', 'z', 'w']\n",
         "\n",
-        "# Test pyspark regression\n",
+        "# Run regression\n",
         "for var in vars:\n",
         "  logit_pyspark(var, spark_train, spark_test)"
       ],
@@ -198,20 +197,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G6fyVTaCmYlh",
-        "outputId": "31b2852d-bf8a-404f-9920-75a1fa39c7d8"
+        "outputId": "f0e43882-82ff-4e7c-9ecf-2a3a1479fd5a"
       },
-      "execution_count": 77,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Model with y as the independent variable has AUC of 1.00\n",
-            "logit_pyspark took 30.03 seconds to run.\n",
-            "Model with z as the independent variable has AUC of 1.00\n",
-            "logit_pyspark took 12.85 seconds to run.\n",
-            "Model with w as the independent variable has AUC of 1.00\n",
-            "logit_pyspark took 11.17 seconds to run.\n"
+            "logit_pyspark took 107.24 seconds to run.\n",
+            "Model with z as the independent variable has AUC of 0.53\n",
+            "logit_pyspark took 71.44 seconds to run.\n",
+            "Model with w as the independent variable has AUC of 0.50\n",
+            "logit_pyspark took 73.12 seconds to run.\n"
           ]
         }
       ]
