--- a/spark_regression.ipynb
+++ b/spark_regression.ipynb
@@ -24,9 +24,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ykLmOfJtkDG7",
-        "outputId": "2ff9c979-b8fa-4bd4-b06a-5023fbadb52f"
+        "outputId": "2845c483-9a1b-421c-ec34-196daf164fa2"
       },
-      "execution_count": 85,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 10,
       "metadata": {
         "id": "WHh74H3Kf7IB"
       },
@@ -70,14 +70,14 @@
       "metadata": {
         "id": "05lGSWi1jYkG"
       },
-      "execution_count": 87,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create dataset\n",
-        "observations = 5_000_000\n",
+        "observations = 500_000\n",
         "\n",
         "target = np.random.binomial(n=1, p=0.2, size=(observations, 1))\n",
         "y = target + np.random.normal(0, 0.1, size=(observations, 1))\n",
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "w3R-k49ngGKV"
       },
-      "execution_count": 88,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "7loXDkWlgGEm"
       },
-      "execution_count": 89,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -164,20 +164,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wYXRG4qkmYqU",
-        "outputId": "f9a79bb2-4714-4f6b-f9f0-092b25e2ec9e"
+        "outputId": "0fd7d913-f76e-4eff-fdac-9f648978d3d9"
       },
-      "execution_count": 90,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Model with y as the independent variable has AUC of 1.00\n",
-            "logit_statmodels took 4.77 seconds to run.\n",
+            "logit_statmodels took 0.61 seconds to run.\n",
             "Model with z as the independent variable has AUC of 0.47\n",
-            "logit_statmodels took 7.19 seconds to run.\n",
-            "Model with w as the independent variable has AUC of 0.50\n",
-            "logit_statmodels took 6.18 seconds to run.\n"
+            "logit_statmodels took 0.43 seconds to run.\n",
+            "Model with w as the independent variable has AUC of 0.51\n",
+            "logit_statmodels took 0.29 seconds to run.\n"
           ]
         }
       ]
@@ -197,20 +197,56 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G6fyVTaCmYlh",
-        "outputId": "f0e43882-82ff-4e7c-9ecf-2a3a1479fd5a"
+        "outputId": "4c424403-3535-4d7b-ff2a-de2ed67327bb"
       },
-      "execution_count": 91,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Model with y as the independent variable has AUC of 1.00\n",
-            "logit_pyspark took 107.24 seconds to run.\n",
+            "logit_pyspark took 20.79 seconds to run.\n",
             "Model with z as the independent variable has AUC of 0.53\n",
-            "logit_pyspark took 71.44 seconds to run.\n",
-            "Model with w as the independent variable has AUC of 0.50\n",
-            "logit_pyspark took 73.12 seconds to run.\n"
+            "logit_pyspark took 11.27 seconds to run.\n",
+            "Model with w as the independent variable has AUC of 0.51\n",
+            "logit_pyspark took 8.37 seconds to run.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test PySpark\n",
+        "vars = ['y', 'z', 'w']\n",
+        "\n",
+        "spark_train_part_1 = spark_train.coalesce(1)\n",
+        "spark_test_part_1 = spark_test.coalesce(1)\n",
+        "\n",
+        "# Run regression\n",
+        "for var in vars:\n",
+        "  logit_pyspark(var, spark_train_part_1, spark_test_part_1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E_ZH6rHcoAOW",
+        "outputId": "ec1b032d-6868-4c9d-f6c7-ba777beb1181"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model with y as the independent variable has AUC of 1.00\n",
+            "logit_pyspark took 9.79 seconds to run.\n",
+            "Model with z as the independent variable has AUC of 0.53\n",
+            "logit_pyspark took 7.93 seconds to run.\n",
+            "Model with w as the independent variable has AUC of 0.51\n",
+            "logit_pyspark took 7.21 seconds to run.\n"
           ]
         }
       ]
