--- a/spark_regression_fast.ipynb
+++ b/spark_regression_fast.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-ZkLjvyen87E"
@@ -11,8 +12,6 @@
         "-  The time-consuming part is to infer the prediction on new data\n",
         "- Therefore, training the model should take place in Python and inference should take place on Spark\n",
         "<br />\n",
-        "<br />\n",
-        "\n",
         "2.   Solution:\n",
         "- Save each model in a dictionary\n",
         "- Load it using pandas_udf (see [run your native Python code with PySpark](https://www.databricks.com/blog/2017/10/30/introducing-vectorized-udfs-for-pyspark.html))\n",
@@ -342,12 +341,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CpsVlW205nlR"
       },
       "source": [
-        "# Pyspark test "
+        "# Pyspark test 2"
       ]
     },
     {
