--- a/config_test.ipynb
+++ b/config_test.ipynb
@@ -25,20 +25,20 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "436184aa-2fec-44cf-ad7c-35a8b557181b",
+   "cell_type": "markdown",
+   "id": "ca68c93b-8654-44f6-910d-d966bd609cc6",
    "metadata": {},
    "source": [
-    "# ini contents\n",
-    "# [database]\n",
-    "# host = localhost\n",
-    "# port = 5432\n",
-    "# username = user\n",
-    "# password = password123\n",
-    "# database = mydb\n",
+    "### ini contents\n",
+    "[database] \\\n",
+    "host = localhost \\\n",
+    "port = 5432 \\\n",
+    "username = user \\\n",
+    "password = password123 \\\n",
+    "database = mydb\n",
     "\n",
-    "# [logging]\n",
-    "# level = INFO"
+    "[logging] \\\n",
+    "level = INFO"
    ]
   },
   {
