--- a/binning_pools_calibration.ipynb
+++ b/binning_pools_calibration.ipynb
@@ -27,15 +27,15 @@
     "\n",
     "##### Constraints:\n",
     "\n",
-    "The default rate per bin should be monotonically increasing or decreasing.\n",
-    "The bins should be statistically different (determined by the Chi-square test or another suitable hypothesis test with a chosen significance level).\n",
-    "The minimum number of observations per bin should be met.\n",
-    "The minimum and maximum number of bins should be within the specified range.\n",
+    "- The default rate per bin should be monotonically increasing or decreasing.\n",
+    "- The bins should be statistically different (determined by the Chi-square test or another suitable hypothesis test with a chosen significance level).\n",
+    "- The minimum number of observations per bin should be met.\n",
+    "- The minimum and maximum number of bins should be within the specified range.\n",
     "\n",
     "##### Variables:\n",
     "\n",
-    "Bins: A set of ordinal categories.\n",
-    "Default rate: The proportion of default observations (default_flag = 1) in each bin."
+    "- Bins: A set of ordinal categories.\n",
+    "- Default rate: The proportion of default observations (default_flag = 1) in each bin."
    ]
   },
   {
