--- a/binning_pools_calibration.ipynb
+++ b/binning_pools_calibration.ipynb
@@ -200,6 +200,32 @@
     }
    ],
    "source": [
+    "def calculate_iv(df, bin_edges):\n",
+    "    binned_data = pd.cut(df['explanatory_variable'], bins=bin_edges, include_lowest=True)\n",
+    "    bin_summary = df.groupby(binned_data)['target_variable'].agg(['count', 'sum'])\n",
+    "    bin_summary['non_target'] = bin_summary['count'] - bin_summary['sum']\n",
+    "    \n",
+    "    bin_summary['target_dist'] = bin_summary['sum'] / bin_summary['sum'].sum()\n",
+    "    bin_summary['non_target_dist'] = bin_summary['non_target'] / bin_summary['non_target'].sum()\n",
+    "    \n",
+    "    bin_summary['woe'] = np.log(bin_summary['target_dist'] / bin_summary['non_target_dist'])\n",
+    "    bin_summary['iv'] = (bin_summary['target_dist'] - bin_summary['non_target_dist']) * bin_summary['woe']\n",
+    "    \n",
+    "    return bin_summary['iv'].sum()\n",
+    "\n",
+    "def calculate_event_rates(df, bin_edges):\n",
+    "    annual_event_rates = []\n",
+    "\n",
+    "    for year in df['year'].unique():\n",
+    "        df_year = df[df['year'] == year]\n",
+    "        bin_indices = np.digitize(df_year['explanatory_variable'], bin_edges)\n",
+    "        bin_counts = np.bincount(bin_indices)[1:len(bin_edges)]\n",
+    "        event_counts = np.bincount(bin_indices, weights=df_year['target_variable'])[1:len(bin_edges)]\n",
+    "        annual_event_rates.append(event_counts / bin_counts)\n",
+    "\n",
+    "    average_annual_event_rates = np.mean(annual_event_rates, axis=0)\n",
+    "    return average_annual_event_rates\n",
+    "\n",
     "def optimize_iv(df, min_bins=2, max_bins=10, min_bin_size=0.01, monotonic=True):\n",
     "    best_bin_edges = None\n",
     "    best_objective_value = np.inf\n",
@@ -264,6 +290,200 @@
     "print(f\"ROC AUC score (non-binned): {roc_auc_non_binned:.4f}\")\n",
     "print(f\"ROC AUC score (binned): {roc_auc_binned:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd231f35-5bc9-40a3-8c8b-6a1f9a4000a3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### C. Implement using OR-tools\n",
+    "\n",
+    "Consider starting with large number of bins and to use constraint programming to solve it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "af29bcfa-84a7-4463-ab65-ca75e21c0b35",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__(): incompatible constructor arguments. The following argument types are supported:\n    1. ortools.util.python.sorted_interval_list.Domain(arg0: int, arg1: int)\n\nInvoked with: 3.339410015512634e-05, 9.999969099974354",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 59>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     58\u001b[0m num_bins \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m250\u001b[39m\n\u001b[1;32m---> 59\u001b[0m optimal_bin_edges \u001b[38;5;241m=\u001b[39m \u001b[43moptimize_iv_cp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_bins\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOptimal bin edges:\u001b[39m\u001b[38;5;124m\"\u001b[39m, optimal_bin_edges)\n",
+      "Input \u001b[1;32mIn [16]\u001b[0m, in \u001b[0;36moptimize_iv_cp\u001b[1;34m(df, num_bins)\u001b[0m\n\u001b[0;32m     34\u001b[0m model \u001b[38;5;241m=\u001b[39m cp_model\u001b[38;5;241m.\u001b[39mCpModel()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Create the variables.\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m bin_vars \u001b[38;5;241m=\u001b[39m [model\u001b[38;5;241m.\u001b[39mNewIntVar(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplanatory_variable\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmin(), df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplanatory_variable\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax(), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbin_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Add the constraints.\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2\u001b[39m):\n",
+      "Input \u001b[1;32mIn [16]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     34\u001b[0m model \u001b[38;5;241m=\u001b[39m cp_model\u001b[38;5;241m.\u001b[39mCpModel()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Create the variables.\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m bin_vars \u001b[38;5;241m=\u001b[39m [\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNewIntVar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexplanatory_variable\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexplanatory_variable\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbin_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Add the constraints.\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2\u001b[39m):\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\ortools\\sat\\python\\cp_model.py:998\u001b[0m, in \u001b[0;36mCpModel.NewIntVar\u001b[1;34m(self, lb, ub, name)\u001b[0m\n\u001b[0;32m    982\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mNewIntVar\u001b[39m(\u001b[38;5;28mself\u001b[39m, lb, ub, name):\n\u001b[0;32m    983\u001b[0m     \u001b[38;5;124;03m\"\"\"Create an integer variable with domain [lb, ub].\u001b[39;00m\n\u001b[0;32m    984\u001b[0m \n\u001b[0;32m    985\u001b[0m \u001b[38;5;124;03mThe CP-SAT solver is limited to integer variables. If you have fractional\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    995\u001b[0m \u001b[38;5;124;03m  a variable whose domain is [lb, ub].\u001b[39;00m\n\u001b[0;32m    996\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 998\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m IntVar(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__model, \u001b[43mDomain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mub\u001b[49m\u001b[43m)\u001b[49m, name)\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__(): incompatible constructor arguments. The following argument types are supported:\n    1. ortools.util.python.sorted_interval_list.Domain(arg0: int, arg1: int)\n\nInvoked with: 3.339410015512634e-05, 9.999969099974354"
+     ]
+    }
+   ],
+   "source": [
+    "from ortools.sat.python import cp_model\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "class SolutionPrinter(cp_model.CpSolverSolutionCallback):\n",
+    "    def __init__(self, num_bins, bin_vars):\n",
+    "        cp_model.CpSolverSolutionCallback.__init__(self)\n",
+    "        self._num_bins = num_bins\n",
+    "        self._bin_vars = bin_vars\n",
+    "        self._optimal_bin_edges = []\n",
+    "\n",
+    "    def on_solution_callback(self):\n",
+    "        self._optimal_bin_edges = [self.Value(var) for var in self._bin_vars]\n",
+    "\n",
+    "    def optimal_bin_edges(self):\n",
+    "        return self._optimal_bin_edges\n",
+    "    \n",
+    "    \n",
+    "def calculate_iv_based_on_bins(df, bins):\n",
+    "    binned_data = pd.cut(df['explanatory_variable'], bins=bins, include_lowest=True)\n",
+    "    bin_summary = df.groupby(binned_data)['target_variable'].agg(['count', 'sum'])\n",
+    "    bin_summary['non_target'] = bin_summary['count'] - bin_summary['sum']\n",
+    "\n",
+    "    bin_summary['target_dist'] = bin_summary['sum'] / bin_summary['sum'].sum()\n",
+    "    bin_summary['non_target_dist'] = bin_summary['non_target'] / bin_summary['non_target'].sum()\n",
+    "\n",
+    "    bin_summary['woe'] = np.log(bin_summary['target_dist'] / bin_summary['non_target_dist'])\n",
+    "    bin_summary['iv'] = (bin_summary['target_dist'] - bin_summary['non_target_dist']) * bin_summary['woe']\n",
+    "\n",
+    "    return bin_summary['iv'].sum()\n",
+    "\n",
+    "def optimize_iv_cp(df, num_bins):\n",
+    "    # Create the model.\n",
+    "    model = cp_model.CpModel()\n",
+    "\n",
+    "    # Create the variables.\n",
+    "    bin_vars = [model.NewIntVar(df['explanatory_variable'].min(), df['explanatory_variable'].max(), f'bin_{i}') for i in range(num_bins - 1)]\n",
+    "\n",
+    "    # Add the constraints.\n",
+    "    for i in range(num_bins - 2):\n",
+    "        model.Add(bin_vars[i] <= bin_vars[i + 1])\n",
+    "\n",
+    "    # Define the objective.\n",
+    "    iv_values = [calculate_iv_based_on_bins(df, [df['explanatory_variable'].min()] + [var_value] + [df['explanatory_variable'].max()]) for var_value in range(df['explanatory_variable'].min(), df['explanatory_variable'].max())]\n",
+    "    objective = sum(iv_values[i] * (bin_vars[i] - bin_vars[i - 1]) for i in range(1, num_bins - 1))\n",
+    "    model.Maximize(objective)\n",
+    "\n",
+    "    # Solve the model.\n",
+    "    solver = cp_model.CpSolver()\n",
+    "    solution_printer = SolutionPrinter(num_bins, bin_vars)\n",
+    "    status = solver.SearchForAllSolutions(model, solution_printer)\n",
+    "\n",
+    "    if status == cp_model.OPTIMAL:\n",
+    "        return solution_printer.optimal_bin_edges()\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "num_bins = 250\n",
+    "optimal_bin_edges = optimize_iv_cp(df, num_bins)\n",
+    "print(\"Optimal bin edges:\", optimal_bin_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4848610-0966-47ad-b923-c8d949b4fa83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xxxxxxxxxx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ac30125-765f-4068-b3ae-489bd13103df",
+   "metadata": {},
+   "source": [
+    "### This is just a test, disregard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b56dbacd-0441-4b4b-ade5-c25bdcbb5892",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC AUC score (non-binned): 0.7423\n",
+      "ROC AUC score (binned): 0.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ortools.linear_solver import pywraplp\n",
+    "\n",
+    "def optimize_iv_ortools(df, min_bins=2, max_bins=10, min_bin_size=0.01, monotonic=True):\n",
+    "    best_bin_edges = None\n",
+    "    best_objective_value = np.inf\n",
+    "    \n",
+    "    num_bins = 250\n",
+    "    initial_bin_edges = np.linspace(df['explanatory_variable'].min(), df['explanatory_variable'].max(), num_bins + 1)[1:-1]\n",
+    "\n",
+    "    solver = pywraplp.Solver.CreateSolver('SCIP')\n",
+    "\n",
+    "    if not solver:\n",
+    "        raise ValueError('No solver available.')\n",
+    "\n",
+    "    # Variables\n",
+    "    bin_edges = [solver.NumVar(df['explanatory_variable'].min(), df['explanatory_variable'].max(), f'bin_edge_{i}') for i in range(num_bins - 1)]\n",
+    "\n",
+    "    # Objective\n",
+    "    iv_objective = solver.Objective()\n",
+    "    iv_objective.SetMinimization()\n",
+    "    for i, edge in enumerate(bin_edges):\n",
+    "        iv_objective.SetCoefficient(edge, -calculate_iv(df, [df['explanatory_variable'].min()] + list(initial_bin_edges[:i+1]) + [df['explanatory_variable'].max()]))\n",
+    "\n",
+    "    # Constraints\n",
+    "    for i in range(num_bins - 2):\n",
+    "        solver.Add(bin_edges[i] <= bin_edges[i + 1])\n",
+    "\n",
+    "    status = solver.Solve()\n",
+    "\n",
+    "    if status == pywraplp.Solver.OPTIMAL:\n",
+    "        best_objective_value = -solver.Objective().Value()\n",
+    "        best_bin_edges = [df['explanatory_variable'].min()] + [edge.solution_value() for edge in bin_edges] + [df['explanatory_variable'].max()]\n",
+    "\n",
+    "    return best_bin_edges\n",
+    "\n",
+    "\n",
+    "optimal_bin_edges = optimize_iv_ortools(df, min_bins=3, max_bins=6)\n",
+    "# print(\"Optimal bin edges:\", optimal_bin_edges)\n",
+    "\n",
+    "\n",
+    "# Create a new column in the dataset that represents the bin assignments\n",
+    "df['bin'] = pd.cut(df['explanatory_variable'], bins=optimal_bin_edges, labels=False, include_lowest=True, duplicates='drop')\n",
+    "\n",
+    "# Calculate ROC AUC scores\n",
+    "roc_auc_non_binned = roc_auc_score(df['target_variable'], df['explanatory_variable'])\n",
+    "roc_auc_binned = roc_auc_score(df['target_variable'], df['bin'])\n",
+    "\n",
+    "print(f\"ROC AUC score (non-binned): {roc_auc_non_binned:.4f}\")\n",
+    "print(f\"ROC AUC score (binned): {roc_auc_binned:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1cf37f-a27f-4f5f-ac01-00db585d8c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
