--- a/binning_pools_calibration.ipynb
+++ b/binning_pools_calibration.ipynb
@@ -34,7 +34,8 @@
     "\n",
     "##### Variables:\n",
     "\n",
-    "- Bins: A set of ordinal categories.\n",
+    "- Option 1. Bins are ordinal: A set of ordinal categories.\n",
+    "- Option 2. We optimise the edges of bins using a continuous solver.\n",
     "- Default rate: The proportion of default observations (default_flag = 1) in each bin."
    ]
   },
@@ -665,12 +666,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "af29bcfa-84a7-4463-ab65-ca75e21c0b35",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__(): incompatible constructor arguments. The following argument types are supported:\n    1. ortools.util.python.sorted_interval_list.Domain(arg0: int, arg1: int)\n\nInvoked with: 3.339410015512634e-05, 9.999969099974354",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 59>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     58\u001b[0m num_bins \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m250\u001b[39m\n\u001b[1;32m---> 59\u001b[0m optimal_bin_edges \u001b[38;5;241m=\u001b[39m \u001b[43moptimize_iv_cp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_bins\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOptimal bin edges:\u001b[39m\u001b[38;5;124m\"\u001b[39m, optimal_bin_edges)\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36moptimize_iv_cp\u001b[1;34m(df, num_bins)\u001b[0m\n\u001b[0;32m     34\u001b[0m model \u001b[38;5;241m=\u001b[39m cp_model\u001b[38;5;241m.\u001b[39mCpModel()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Create the variables.\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m bin_vars \u001b[38;5;241m=\u001b[39m [model\u001b[38;5;241m.\u001b[39mNewIntVar(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplanatory_variable\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmin(), df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplanatory_variable\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax(), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbin_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Add the constraints.\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2\u001b[39m):\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     34\u001b[0m model \u001b[38;5;241m=\u001b[39m cp_model\u001b[38;5;241m.\u001b[39mCpModel()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Create the variables.\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m bin_vars \u001b[38;5;241m=\u001b[39m [\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNewIntVar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexplanatory_variable\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexplanatory_variable\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbin_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Add the constraints.\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_bins \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2\u001b[39m):\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\ortools\\sat\\python\\cp_model.py:998\u001b[0m, in \u001b[0;36mCpModel.NewIntVar\u001b[1;34m(self, lb, ub, name)\u001b[0m\n\u001b[0;32m    982\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mNewIntVar\u001b[39m(\u001b[38;5;28mself\u001b[39m, lb, ub, name):\n\u001b[0;32m    983\u001b[0m     \u001b[38;5;124;03m\"\"\"Create an integer variable with domain [lb, ub].\u001b[39;00m\n\u001b[0;32m    984\u001b[0m \n\u001b[0;32m    985\u001b[0m \u001b[38;5;124;03mThe CP-SAT solver is limited to integer variables. If you have fractional\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    995\u001b[0m \u001b[38;5;124;03m  a variable whose domain is [lb, ub].\u001b[39;00m\n\u001b[0;32m    996\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 998\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m IntVar(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__model, \u001b[43mDomain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mub\u001b[49m\u001b[43m)\u001b[49m, name)\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__(): incompatible constructor arguments. The following argument types are supported:\n    1. ortools.util.python.sorted_interval_list.Domain(arg0: int, arg1: int)\n\nInvoked with: 3.339410015512634e-05, 9.999969099974354"
+     ]
+    }
+   ],
    "source": [
     "from ortools.sat.python import cp_model\n",
     "import numpy as np\n",
