--- a/binning_pools_calibration_v2.ipynb
+++ b/binning_pools_calibration_v2.ipynb
@@ -69,6 +69,7 @@
     "\n",
     "##### Helper functions:\n",
     "\n",
+    "```python \n",
     "from ortools.sat.python import cp_model\n",
     "\n",
     "def calculate_iv(df, binned_column, target_column):\n",
@@ -110,7 +111,8 @@
     "        \n",
     "        bin_pairs_p_values.append((bin1, bin2, p))\n",
     "    \n",
-    "    return pd.DataFrame(bin_pairs_p_values, columns=['Bin1', 'Bin2', 'P-value'])"
+    "    return pd.DataFrame(bin_pairs_p_values, columns=['Bin1', 'Bin2', 'P-value'])\n",
+    "```"
    ]
   },
   {
