--- a/binning_pools_calibration_v2.ipynb
+++ b/binning_pools_calibration_v2.ipynb
@@ -38,7 +38,9 @@
     "- Bins as a set of ordinal categories.\n",
     "- Default rate: The proportion of default observations (default_flag = 1) in each bin.\n",
     "\n",
-    "A similar problem is solved here: https://github.com/guillermo-navas-palencia/optbinning/blob/master/optbinning/binning/cp.py"
+    "A similar problem is solved here: https://github.com/guillermo-navas-palencia/optbinning/blob/master/optbinning/binning/cp.py\n",
+    "\n",
+    "--------------------------------------"
    ]
   },
   {
@@ -46,7 +48,7 @@
    "id": "1a705988-f8af-4d21-9c58-65d1e832f310",
    "metadata": {},
    "source": [
-    "**ChatGPT prompt one could use**\n",
+    "**A possible ChatGPT prompt**\n",
     "\n",
     "Create CP model using ortools that solves the optimisation problem, where an input is a pandas dataframe consisting of a discrete explanatory variable with 50 bins and a binary target variable (default or not a default). The model should combine adjacent bins that maximise IV given that all constraints are satisified. IV must be calculated for every proposed combination of existing bins from stratch. The model should return a mapping table where all 50 bins are mapped to new categories. Focus onmake the code run.\n",
     "\n",
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "9913a43e-ec8b-46ac-a5f4-cebe59c68825",
    "metadata": {
     "tags": []
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "7cf57067-ebcd-4287-b65c-f6b849bfd62f",
    "metadata": {
     "tags": []
@@ -194,7 +196,7 @@
        "9.999969099974354"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "052f5d46-c752-4eb6-bcfb-aa59d2021ef4",
    "metadata": {
     "tags": []
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "af29bcfa-84a7-4463-ab65-ca75e21c0b35",
    "metadata": {
     "tags": []
@@ -289,8 +291,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 55>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     52\u001b[0m min_observations_per_bin \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m     53\u001b[0m significance_level \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m\n\u001b[1;32m---> 55\u001b[0m new_categories \u001b[38;5;241m=\u001b[39m \u001b[43moptimize_bins\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbinned_column\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget_column\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_bins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_bins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_observations_per_bin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignificance_level\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     57\u001b[0m new_categories\n",
-      "Input \u001b[1;32mIn [28]\u001b[0m, in \u001b[0;36moptimize_bins\u001b[1;34m(df, binned_column, target_column, min_bins, max_bins, min_observations_per_bin, significance_level)\u001b[0m\n\u001b[0;32m     24\u001b[0m     model\u001b[38;5;241m.\u001b[39mAdd(\u001b[38;5;28msum\u001b[39m(df[binned_column] \u001b[38;5;241m==\u001b[39m i) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m min_observations_per_bin)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Add custom constraint for monotonic and statistical difference using a callback function\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAddConstraint\u001b[49m(merged_bins_satisfy_constraints_callback(df, binned_column, target_column, significance_level), \u001b[38;5;28mlist\u001b[39m(bin_vars\u001b[38;5;241m.\u001b[39mvalues()))\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# Define the objective function (IV value)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m iv_expression \u001b[38;5;241m=\u001b[39m []\n",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 55>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     52\u001b[0m min_observations_per_bin \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m     53\u001b[0m significance_level \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m\n\u001b[1;32m---> 55\u001b[0m new_categories \u001b[38;5;241m=\u001b[39m \u001b[43moptimize_bins\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbinned_column\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget_column\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_bins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_bins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_observations_per_bin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignificance_level\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     57\u001b[0m new_categories\n",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36moptimize_bins\u001b[1;34m(df, binned_column, target_column, min_bins, max_bins, min_observations_per_bin, significance_level)\u001b[0m\n\u001b[0;32m     24\u001b[0m     model\u001b[38;5;241m.\u001b[39mAdd(\u001b[38;5;28msum\u001b[39m(df[binned_column] \u001b[38;5;241m==\u001b[39m i) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m min_observations_per_bin)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Add custom constraint for monotonic and statistical difference using a callback function\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAddConstraint\u001b[49m(merged_bins_satisfy_constraints_callback(df, binned_column, target_column, significance_level), \u001b[38;5;28mlist\u001b[39m(bin_vars\u001b[38;5;241m.\u001b[39mvalues()))\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# Define the objective function (IV value)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m iv_expression \u001b[38;5;241m=\u001b[39m []\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'CpModel' object has no attribute 'AddConstraint'"
      ]
     }
@@ -363,7 +365,7 @@
    "outputs": [],
    "source": [
     "# Inspect the monotinicity of the solution\n",
-    "df.groupby(['bin']).agg({'target_variable':['mean','count']})"
+    "df.groupby([new_categories]).agg({'target_variable':['mean','count']})"
    ]
   },
   {
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5b2d4b7e-8f7f-4e80-8a94-c50e5a118740",
    "metadata": {
     "tags": []
