--- a/optimal_pooling.ipynb
+++ b/optimal_pooling.ipynb
@@ -14,7 +14,26 @@
     "- **Monotonic relationship**: Ideally, bins should have a monotonic relationship with the target variable, meaning that the relationship should consistently increase or decrease as the bin values change. This simplifies interpretation and can improve model performance.\n",
     "- **Interpretability**: The bins should be easy to understand and interpret, with meaningful boundaries that are relevant to the domain of the problem. This helps stakeholders better understand the results and can aid in decision-making.\n",
     "- **Stability**: Good optimal binning should be stable and not sensitive to small changes in the data. This ensures that the model's performance is robust and reliable.\n",
-    "- **Domain knowledge**: The binning process should take into account domain knowledge and expert input when determining the bin boundaries. This can help ensure that the bins are meaningful and relevant to the problem at hand."
+    "- **Domain knowledge**: The binning process should take into account domain knowledge and expert input when determining the bin boundaries. This can help ensure that the bins are meaningful and relevant to the problem at hand.\n",
+    "\n",
+    "-----------------------------\n",
+    "\n",
+    "#### Objective Function\n",
+    "\n",
+    "Maximize IV value of the bins\n",
+    "\n",
+    "IV = ∑((Good% - Bad%) * ln(Good% / Bad%)), where Good% and Bad% are the proportions of non-default and default observations, respectively, in each bin.\n",
+    "\n",
+    "**Constraints**:\n",
+    "- The default rate per bin should be monotonically increasing or decreasing.\n",
+    "- The bins should be statistically different (determined by the Chi-square test or another suitable hypothesis test with a chosen significance level).\n",
+    "- The minimum number of observations per bin should be met.\n",
+    "- The minimum and maximum number of bins should be within the specified range.\n",
+    "\n",
+    "**Variables**:\n",
+    "- Bins as a set of ordinal categories.\n",
+    "- Default rate: The proportion of default observations (default_flag = 1) in each bin.\n",
+    "- A similar problem is solved here: https://github.com/guillermo-navas-palencia/optbinning/blob/master/optbinning/binning/cp.py"
    ]
   },
   {
