--- a/dq_framework.ipynb
+++ b/dq_framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "1c8459bd-f0f0-4894-a63a-3a8d3be4b6d4",
    "metadata": {
     "tags": []
@@ -12,11 +12,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   column          rule      category  result assessment assessment_date\n",
-      "0     age  completeness  completeness     0.9      amber   20230601_2138\n",
-      "1     age         range      validity     1.0      green   20230601_2138\n",
-      "2  income  completeness  completeness     0.9      amber   20230601_2138\n",
-      "3  income     data type   consistency     1.0      green   20230601_2138\n"
+      "       id     rule      category  metric result assessment_date\n",
+      "0     age  rule_01  completeness     0.9  amber   20230601_2142\n",
+      "1     age  rule_03   consistency     0.0    red   20230601_2142\n",
+      "2  income  rule_02      validity     1.0  green   20230601_2142\n",
+      "3  income  rule_03   consistency     1.0  green   20230601_2142\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "    'min_val': [0, 0],\n",
     "    'max_val': [100, 200000],\n",
     "    'type': ['int', 'float'],\n",
-    "    'rules': [['completeness', 'range'], ['completeness', 'data type']]\n",
+    "    'rules': [['rule_01', 'rule_03'], ['rule_02', 'rule_03']]\n",
     "})\n",
     "\n",
     "# Define rules\n",
@@ -140,9 +140,9 @@
     "\n",
     "# Store rules in a dictionary\n",
     "rules_dict = {\n",
-    "    'completeness': (check_completeness, 'completeness'),\n",
-    "    'range': (check_range, 'validity'),\n",
-    "    'data type': (check_datatype, 'consistency')\n",
+    "    'rule_01': (check_completeness, 'completeness'),\n",
+    "    'rule_02': (check_range, 'validity'),\n",
+    "    'rule_03': (check_datatype, 'consistency')\n",
     "}\n",
     "\n",
     "# Run rules and collect results\n",
@@ -157,14 +157,14 @@
     "            results.append([config['column'], rule_name, rule_category, result, color, datetime.now().strftime(\"%Y%m%d_%H%M\")])\n",
     "\n",
     "# Create dataframe for results\n",
-    "final_result = pd.DataFrame(results, columns=['column', 'rule', 'category', 'metric', 'result', 'assessment_date'])\n",
+    "final_result = pd.DataFrame(results, columns=['column', 'id', 'category', 'metric', 'result', 'assessment_date'])\n",
     "print(final_result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba8ed73-8843-4a8b-8c02-c629d0ef2fa7",
+   "id": "09643246-c9cc-4b3f-bd98-d5deef161bc7",
    "metadata": {},
    "outputs": [],
    "source": []
