--- a/dq_framework.ipynb
+++ b/dq_framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "1c8459bd-f0f0-4894-a63a-3a8d3be4b6d4",
    "metadata": {
     "tags": []
@@ -12,11 +12,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       id     rule      category  metric result assessment_date\n",
-      "0     age  rule_01  completeness     0.9  amber   20230601_2142\n",
-      "1     age  rule_03   consistency     0.0    red   20230601_2142\n",
-      "2  income  rule_02      validity     1.0  green   20230601_2142\n",
-      "3  income  rule_03   consistency     1.0  green   20230601_2142\n"
+      "   column       id      category  metric result assessment_date\n",
+      "0     age  rule_01  completeness     0.9  amber   20230601_2149\n",
+      "1     age  rule_03   consistency     0.0    red   20230601_2149\n",
+      "2  income  rule_02      validity     1.0  green   20230601_2149\n",
+      "3  income  rule_03   consistency     1.0  green   20230601_2149\n"
      ]
     }
    ],
@@ -24,6 +24,8 @@
     "from datetime import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "dt_stamp = datetime.now().strftime(\"%Y%m%d_%H%M\")\n",
     "\n",
     "# Dummy dataset\n",
     "data_df = pd.DataFrame({\n",
@@ -150,24 +152,21 @@
     "for idx, config in config_table.iterrows():\n",
     "    for rule_name, rule_tuple in rules_dict.items():\n",
     "        if rule_name in config['rules']:\n",
-    "            rule_func = rule_tuple[0]  # function\n",
-    "            rule_category = rule_tuple[1]  # category\n",
-    "            result = rule_func(data_df, config)\n",
-    "            color = assess_outcome(rule_category, result)\n",
-    "            results.append([config['column'], rule_name, rule_category, result, color, datetime.now().strftime(\"%Y%m%d_%H%M\")])\n",
+    "            try:\n",
+    "                rule_func = rule_tuple[0]  # function\n",
+    "                rule_category = rule_tuple[1]  # category\n",
+    "                result = rule_func(data_df, config)\n",
+    "                color = assess_outcome(rule_category, result)\n",
+    "                results.append([config['column'], rule_name, rule_category, result, color, dt_stamp])\n",
+    "            except Exception as e:\n",
+    "                print(f'The rule {rule_name} failed with column {config[\"column\"]}')\n",
+    "                results.append([config['column'], rule_name, rule_category, np.nan, np.nan, dt_stamp])\n",
     "\n",
     "# Create dataframe for results\n",
-    "final_result = pd.DataFrame(results, columns=['column', 'id', 'category', 'metric', 'result', 'assessment_date'])\n",
+    "columns = ['column', 'id', 'category', 'metric', 'result', 'assessment_date']\n",
+    "final_result = pd.DataFrame(results, columns=columns)\n",
     "print(final_result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09643246-c9cc-4b3f-bd98-d5deef161bc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
