--- a/compare_company_names.ipynb
+++ b/compare_company_names.ipynb
@@ -15,6 +15,35 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Company Name Matching Algorithm\n",
+        "\n",
+        "1. The algorithm is designed to match company names from two separate datasets. It uses both cosine similarity of TF-IDF vectors and fuzzy string matching to quantify the similarity between company names. The algorithm is implemented in several stages:\n",
+        "\n",
+        "2. **Preprocessing**: Company names are lowercased and tokenized. Common words (stop words) are removed from the company names to focus on the most distinguishing features of each name.\n",
+        "\n",
+        "3. **Feature Extraction**: The TF-IDF (Term Frequency-Inverse Document Frequency) of the preprocessed company names is calculated. TF-IDF is a statistical measure used to evaluate how important a word is to a document in a collection or corpus. This transforms the text data into a format that can be used in the subsequent steps.\n",
+        "\n",
+        "4. **Similarity Calculation**: Cosine similarity is computed for the TF-IDF vectors of the company names. This gives a measure of how similar the company names are in terms of their word usage. In parallel, a fuzzy string matching ratio is calculated for the original company names, giving a measure of the similarity of the company names in terms of character sequences.\n",
+        "\n",
+        "5. **Rank Calculation**: For each company in the first list, the cosine similarities and fuzzy match ratios with all companies in the second list are ranked. The rank of 1 is given to the highest score.\n",
+        "\n",
+        "6. **Average Rank Calculation**: The average of the TF-IDF cosine similarity rank and the fuzzy match ratio rank is calculated for each pair of companies. This average rank gives a balanced measure of similarity that takes into account both word usage and character sequence.\n",
+        "\n",
+        "7. **Best Match Identification**: For each company in the first list, the company from the second list with the lowest average rank is identified as the best match. The result is a DataFrame that lists, for each company in the first list, all the companies in the second list along with their similarity measures, ranks, and an indication of which is the best match.\n",
+        "\n",
+        "This algorithm provides a robust way of matching company names that can handle a variety of differences in the way company names are represented, including abbreviations, inclusion or exclusion of 'Inc.' or 'Corp.', and minor variations in spelling.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Rr0qxvD-7fSQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Import the necessary libraries\n",
@@ -28,8 +57,17 @@
         "import nltk\n",
         "\n",
         "nltk.download('stopwords')\n",
-        "nltk.download('punkt')\n",
-        "\n",
+        "nltk.download('punkt')"
+      ],
+      "metadata": {
+        "id": "3cqmd6Xy7A4E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Create two dataframes with company names and addresses\n",
         "df1 = pd.DataFrame({\n",
         "    'Company': [\"Apple Inc.\", \"Microsoft Corporation\", \"Amazon.com Inc.\", \"Facebook Inc.\"],\n",
